# fake_news_detection

./: .gitignore  README.md  pyproject.toml
.github/workflows/: kaggle_ci.yaml
configs/: default.yaml
data/fake_news/processed/: gossipcop_processed.csv
my_nb/: kernel-metadata.json  train-ml-pipeline.ipynb
notebooks/: eda.ipynb
scripts/: evaluate.py  processed_data.py  train.py
src/: utils.py
src/data/: dataset.py
src/evaluate/: metrics.py
src/models/: baseline.py
src/tracking/: wandb.py
src/train/: simple_trainer.py
